<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('clientes', function (Blueprint $table) {
            $table->id();
            $table->string('nomes');
            $table->string('numero_documento');
            $table->string('email');
            $table->string('contacto');
            $table->enum('tipo_cliente', ['Professor','Estudante','Funcionario','Visitante']);
            $table->enum('genero', ['Masculino','Femenino','Outro']);
            $table->boolean('estado')->default(true);
           
            $table->timestamps();
             $table->softDeletes();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('clientes');
    }
};
